--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ branches:
 cache:
   ccache: true
   directories:
-   - third_party/node_modules/
    - $DEPOT_TOOLS_PATH
    - $BUILD_PATH
 env:
@@ -28,7 +27,10 @@ install:
  - curl -sSf https://sh.rustup.rs | sh -s -- -y
  - export PATH=$HOME/.cargo/bin:$PATH
  - rustc --version
- - ./tools/build_third_party.py
+ # TODO(ry) Do not depend on run_hooks because it calls
+ # //third_party/depot_tools/download_from_google_storage.py
+ # Use git lfs and combine run_hooks with build_third_party?
+ - ./tools/run_hooks.py
  # ccache needs the custom LLVM to be in PATH and other variables.
  - export PATH=`pwd`/third_party/llvm-build/Release+Asserts/bin:$PATH
  - export CCACHE_CPP2=yes
