--- a/BUILD.gn
+++ b/BUILD.gn
@@ -10,8 +10,8 @@ group("all") {
   deps = [
     ":deno",
     ":deno_ns",
-    ":handlers_test",
     ":test_cc",
+    ":test_rs",
   ]
 }
 
@@ -33,12 +33,29 @@ config("deno_config") {
   }
 }
 
+main_extern = [
+  "$rust_build:libc",
+  "$rust_build:log",
+  "$rust_build:url",
+  "//build_extra/flatbuffers/rust:flatbuffers",
+  ":msg_rs",
+
+  # Indirect rust depdendencies also need to be listed here:
+  # * Linking to `:handlers` or `:libdeno` isn't possible, because they
+  #   already contain some symbols exported by `handlers.rs`. These duplicate
+  #   symbols trip up the linker.
+  # * The `rust_test` and `rust_executable` templates only produce an object
+  #   file, and then invoke an external linker. Transitive rust depencenies
+  #   are not resolved in either step.
+  "$rust_build:idna",
+  "$rust_build:percent_encoding",
+  "$rust_build:unicode_bidi",
+  "$rust_build:unicode_normalization",
+]
+
 rust_executable("deno") {
   source_root = "src/main.rs"
-  extern = [
-    "$rust_build:libc",
-    "$rust_build:log",
-  ]
+  extern = main_extern
   deps = [
     ":libdeno",
   ]
@@ -50,45 +67,15 @@ rust_executable("deno") {
 # ns = no snapshot
 rust_executable("deno_ns") {
   source_root = "src/main.rs"
-  extern = [
-    "$rust_build:libc",
-    "$rust_build:log",
-  ]
+  extern = main_extern
   deps = [
     ":libdeno_nosnapshot",
   ]
 }
 
-rust_staticlib("handlers") {
-  source_root = "src/handlers.rs"
-  extern = [
-    "$rust_build:libc",
-    "$rust_build:url",
-    "$rust_build:log",
-    ":msg_rs",
-    "//build_extra/flatbuffers/rust:flatbuffers",
-  ]
-}
-
-rust_test("handlers_test") {
-  source_root = "src/handlers.rs"
-  extern = [
-    "$rust_build:libc",
-    "$rust_build:url",
-    "$rust_build:log",
-
-    # Indirect rust depdendencies also need to be listed here:
-    # * Linking to `:handlers` or `:libdeno` isn't possible, because they
-    #   already contain some symbols exported by `handlers.rs`. These duplicate
-    #   symbols trip up the linker.
-    # * The `rust_test` and `rust_executable` templates only produce an object
-    #   file, and then invoke an external linker. Transitive rust depencenies
-    #   are not resolved in either step.
-    "$rust_build:idna",
-    "$rust_build:percent_encoding",
-    "$rust_build:unicode_bidi",
-    "$rust_build:unicode_normalization",
-  ]
+rust_test("test_rs") {
+  source_root = "src/main.rs"
+  extern = main_extern
   deps = [
     ":deno_bindings",
   ]
@@ -102,8 +89,7 @@ executable("test_cc") {
   ]
   deps = [
     ":deno_base_test",
-    ":deno_bindings",
-    ":handlers",
+    ":deno_flatbuffer_builder",
     "//testing/gtest:gtest",
   ]
   configs += [ ":deno_config" ]
@@ -117,7 +103,6 @@ static_library("libdeno") {
   deps = [
     ":create_snapshot_deno",
     ":deno_bindings",
-    ":handlers",
   ]
   configs += [ ":deno_config" ]
 }
@@ -156,19 +141,29 @@ v8_source_set("deno_base_test") {
   configs = [ ":deno_config" ]
 }
 
-v8_source_set("deno_bindings") {
+v8_source_set("deno_flatbuffer_builder") {
   sources = [
     "src/flatbuffer_builder.cc",
     "src/flatbuffer_builder.h",
+  ]
+  deps = [
+    ":deno_base",
+  ]
+  public_deps = [
+    "build_extra/flatbuffers:flatbuffers",
+  ]
+  configs = [ ":deno_config" ]
+}
+
+v8_source_set("deno_bindings") {
+  sources = [
     "src/reply.cc",
     "src/reply.h",
   ]
   deps = [
     ":deno_base",
+    ":deno_flatbuffer_builder",
     ":msg_cpp",
-  ]
-  public_deps = [
-    "build_extra/flatbuffers:flatbuffers",
   ]
   configs = [ ":deno_config" ]
 }
@@ -231,7 +226,6 @@ source_set("libdeno_nosnapshot") {
   deps = [
     ":bundle",
     ":deno_bindings",
-    ":handlers",
   ]
   configs += [ ":deno_config" ]
   bundle_outputs = get_target_outputs(":bundle")
